--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,7 @@
-flask
 requests
 psycopg2-binary
-yfinance
-plotly
-pandas
-openai
+Flask==2.3.3
+openai==1.3.7
+yfinance==0.2.31
+plotly==5.18.0
+pandas==2.0.3
