--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,5 @@
-Flask==2.3.3
-openai==1.3.7
-yfinance==0.2.31
-plotly==5.18.0
-pandas==2.0.3
-pipdeptree
+Flask==2.0.1
+gunicorn==20.1.0
+requests==2.26.0
+yfinance==0.1.70
+python-dotenv==0.19.1
