--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,14 @@
-Flask==2.0.1
-gunicorn==20.1.0
-requests==2.26.0
-yfinance==0.1.70
-python-dotenv==0.19.1
+   Flask==2.0.1
+   Werkzeug==2.0.1
+   gunicorn==20.1.0
+   requests==2.26.0
+   yfinance==0.1.70
+   python-dotenv==0.19.1
+   websockets==11.0.3
+   alpaca-trade-api==3.0.0
+   pytz==2022.1
+   pandas==1.3.5
+   numpy==1.21.5
+   matplotlib==3.4.3
+   seaborn==0.11.2
+   plotly==5.10.0
