--- a/.github/workflows/heroku-deploy.yml
+++ b/.github/workflows/heroku-deploy.yml
@@ -1,4 +1,5 @@
 name: Deploy to Heroku
+# This workflow is disabled as we're now using Render for deployment
 
 # This workflow requires three secrets to be set up in your GitHub repository:
 # 1. HEROKU_API_KEY: Your Heroku API key
@@ -8,8 +9,7 @@ name: Deploy to Heroku
 on:
   push:
     branches:
-      - main
-      - heroku-deployment  # Added to deploy from this branch too
+      - non-existent-branch # Using a non-existent branch to effectively disable this workflow
 
 jobs:
   build:
