--- a/requirements.txt
+++ b/requirements.txt
@@ -1,18 +1,16 @@
-
-   Flask==2.0.1
-   Werkzeug==2.0.1
-   gunicorn==20.1.0
-   requests==2.26.0
-   yfinance==0.1.70
-   python-dotenv==0.19.1
-   websockets==11.0.3
-   alpaca-trade-api==3.0.0
-   pytz==2022.1
-   pandas==1.3.5
-   numpy==1.21.5
-   matplotlib==3.4.3
-   seaborn==0.11.2
-   plotly==5.10.0
-openai==1.3.7
+Flask==2.0.1
+Werkzeug==2.0.1
+gunicorn==20.1.0
 requests==2.31.0
-pipdeptree
+yfinance==0.2.12
+python-dotenv==0.19.1
+websockets==11.0.3
+alpaca-trade-api==3.0.0
+pytz==2022.1
+pandas==1.5.3
+numpy==1.24.3
+matplotlib==3.7.1
+seaborn==0.12.2
+plotly==5.14.1
+openai==1.3.7
+pipdeptree==2.13.0
