--- a/requirements.txt
+++ b/requirements.txt
@@ -4,7 +4,8 @@ gunicorn==20.1.0
 requests==2.31.0
 yfinance==0.2.12
 python-dotenv==0.19.1
-websockets==10.4
+# websockets is installed via build.sh with the correct version
+# websockets==10.4
 alpaca-trade-api==3.0.0
 pytz==2022.7.1
 pandas==1.5.3
