--- a/requirements.txt
+++ b/requirements.txt
@@ -4,8 +4,9 @@ gunicorn==20.1.0
 requests==2.31.0
 yfinance==0.2.12
 python-dotenv==0.19.1
-# websockets is installed via build.sh with the correct version
+# websockets and aiohttp are installed via requirements-binary.txt
 # websockets==10.4
+# aiohttp is also excluded as it's installed from binary
 alpaca-trade-api==3.0.0
 pytz==2022.7.1
 pandas==1.5.3
